more v1.0.0 progress